--- a/setup.cfg
+++ b/setup.cfg
@@ -3,10 +3,10 @@ name = kabbes_the_garden
 version = 0.3.0
 author = James Kabbes
 author_email = james.kabbes@gmail.com
-description = Package for easily installing and setting up project environments
+description = A collection of all related kabbes packages
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://pypi.org/project/kabbes-the-garden/
+url = https://pypi.org/project/kabbes_the_garden
 project_urls =
     GitHub = https://github.com/jameskabbes/the_garden
     Documentation = https://jameskabbes.github.io/the_garden
@@ -20,21 +20,6 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
-install_requires = 
-    kabbes_py_starter
-    kabbes_parent_class
-    kabbes_dir_ops
-    kabbes_aws_connections
-    kabbes_aws_credentials
-    kabbes_analytics_packages
-    kabbes_real_time_input
-    kabbes_user_profile
-    kabbes_nanoid
-    kabbes_database_connections
-    kabbes_ml_pipeline
-    kabbes_repository_generator
-    kabbes_pypi_builder
-    kabbes_smart_documentation
 
 [options.packages.find]
 where = src
