--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
-name = kabbes_the_garden
+name = kabbes_garden
 version = 0.3.0
 author = James Kabbes
 author_email = james.kabbes@gmail.com
-description = Package for easily installing and setting up project environments
+description = Package for managing all other package releases
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://pypi.org/project/kabbes-the-garden/
+url = https://pypi.org/project/kabbes_garden
 project_urls =
-    GitHub = https://github.com/jameskabbes/the_garden
-    Documentation = https://jameskabbes.github.io/the_garden
+    GitHub = https://github.com/jameskabbes/garden
+    Documentation = https://jameskabbes.github.io/garden
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
@@ -20,21 +20,6 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
-install_requires = 
-    kabbes_py_starter
-    kabbes_parent_class
-    kabbes_dir_ops
-    kabbes_aws_connections
-    kabbes_aws_credentials
-    kabbes_analytics_packages
-    kabbes_real_time_input
-    kabbes_user_profile
-    kabbes_nanoid
-    kabbes_database_connections
-    kabbes_ml_pipeline
-    kabbes_repository_generator
-    kabbes_pypi_builder
-    kabbes_smart_documentation
 
 [options.packages.find]
 where = src
