changing dated config file

--- a/src/kabbes_garden/CONFIG.json
+++ b/src/kabbes_garden/CONFIG.json
@@ -19,5 +19,5 @@
             }
         }
     },
-    "src_name":"{{pypi_builder.src_name}}"
+    "src_name":"{{kabbes_pypi_builder.src_name}}"
 }
